Add spotbugs, fixing the problems it finds.